parser/sample_tests/ours/bad6.txt

*** Error line 4.
  while (xyz) {
         ^^^
*** syntax error

